--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "express-jwt": "^5.3.3",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
+    "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pm2": "^4.4.0"
+    "pm2": "^4.4.0",
+    "supertest": "^4.0.2"
   }
 }
