Adding products test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "pm2 start src/index.js --no-daemon",
     "dev": "NODE_ENV=development nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest -i --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
